--- a/web-developer.html
+++ b/web-developer.html
@@ -99,7 +99,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://flowtify.recruiterbox.com/jobs/fk036c2'>
+<h5><a href='http://flowtify.recruiterbox.com/jobs/fk036c2'>
     Junior React Web Developer (m/w/d) at Flowtify GmbH
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -164,7 +164,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p>3 days ago ... At AIcrowd, we're looking to grow our team with a Web Application Developer (
 Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/knakdigital/job/e1snr9qd6xrikcicznyxk7xhse/websitemanager'>Web Developer | Knak Digital</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/knakdigital/job/e1snr9qd6xrikcicznyxk7xhse/websitemanager'>Web Developer | Knak Digital</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -248,7 +248,7 @@ a   Full Stack Developer   for Saint Benedict Press, you will collaborate on,?..
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ocls.applicantstack.com/x/detail/a2rm7gsppro1'>Web Developer - Orange County Library System</a></h5> 
+<h5><a href='https://ocls.applicantstack.com/x/detail/a2rm7gsppro1'>Web Developer - Orange County Library System</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 11, 2019 ... ... filters, and tokenizers to change the way that data is indexed and queried; 
 researches configuration of Solr search engines and the Solr query language.</p>
@@ -257,7 +257,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='http://pitchup.applytojob.com/apply/vZh66VBWxZ/Python-Web-Developer'>Python web developer - Pitchup.com - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pitchup.applytojob.com/apply/vZh66VBWxZ/Python-Web-Developer'>Python web developer - Pitchup.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -291,7 +291,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://flextrade.recruitee.com/o/web-developer'>
+<h5><a href='https://flextrade.recruitee.com/o/web-developer'>
       Web Developer - FlexTrade
     </a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
@@ -301,7 +301,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oW8uafws&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=n99jPKwF'>MORI Associates, Inc. Careers - JavaScript Web Developer - NASA Moon-Mars project</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oW8uafws&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=n99jPKwF'>MORI Associates, Inc. Careers - JavaScript Web Developer - NASA Moon-Mars project</a></h5> 
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
@@ -352,7 +352,7 @@ und JavaScript? M?chtest du mithilfe der neusten Technologien und zusammen
 <p><span class="badge badge-light">Oxford London</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tripadvisor/jobs/1781962'>Job Application for Fullstack Web Developer - Software Engineer II at TripAdvisor</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tripadvisor/jobs/1781962'>Job Application for Fullstack Web Developer - Software Engineer II at TripAdvisor</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -365,7 +365,7 @@ w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999691996133-java-web-developer-operation'>Woongjin, Inc Java Web Developer &amp; Operation | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999691996133-java-web-developer-operation'>Woongjin, Inc Java Web Developer &amp; Operation | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -420,7 +420,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ncsoftwest/jobs/1780250'>Job Application for Web Development Manager  at NCSOFT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ncsoftwest/jobs/1780250'>Job Application for Web Development Manager  at NCSOFT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -448,7 +448,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PrometheusGroup/743999684299989--net-web-developer'>Prometheus Group .Net Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PrometheusGroup/743999684299989--net-web-developer'>Prometheus Group .Net Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -466,7 +466,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
